Fix: Improve contrast

--- a/src/app/motus/motus-mot-input/motus-mot-input.component.scss
+++ b/src/app/motus/motus-mot-input/motus-mot-input.component.scss
@@ -49,7 +49,7 @@
     border: 1px solid black;
     -webkit-appearance: none;
     outline: none;
-    background: rgba(128, 128, 128, 0.7);
+    background: rgba(200, 200, 200, 0.7);
     -webkit-transition: background-color 0.5s ease-out;
     -moz-transition: background-color 0.5s ease-out;
     -o-transition: background-color 0.5s ease-out;
